# rust_lsystems

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: hilbert.rs
inputs/: hilbert.yml  stochastic_plant.yml
outputs/: fractal_plant_5.eps  fractal_plant_6.eps  hilbert_curve_3.eps  hilbert_curve_8.eps  rand_fractal_plant_6.eps  sepinski_5.eps  sepinski_9.eps
src/: lib.rs  main.rs
src/lsystem/: lsystem.rs  mod.rs  rule.rs
