[package]
name = "rust_drawing"
version = "0.1.0"
authors = ["Andy <andy@agrible.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turtle-graphics = "0.1.2"
rand = "0.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8.11"
